--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "jszip": "^3.6.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "serve-favicon": "^2.5.0",
     "websocket": "^1.0.33"
   },
